[Misc] Improved test